3.0.0-yb-1
 * Add load balancing policy for YugaByte

3.0.0
 * Update Spark to 3.0.1 and commons-lang to 3.9
 * Remove full table scans performance regression (SPARKC-614)
 * Restore PrefetchingResultSetIterator (SPARKC-619)
 * Restore ContinuousPaging properties (SPARKC-606)
 * Integration tests work with C* 4.0.0-beta (SPARKC-615)
 * Fix USE <catalog> command (SPARKC-615)

3.0.0-beta
 * Data Source v2 support
 * Secondary artifact with shaded typesafe.config

2.5.1
 * Introduce shaded version of the main artifact to fix integration with Databricks Cloud
 * Exclude com.github.jnr and org.apache.tinkerpop dependencies to fix --packages
 * Improve Astra connection properties

2.5.0
 * LTS Release for Spark 2.4

3.0.0-Alpha2 (Included in 2.5.0)
 * Add ReadConf Parameter to JoinWithCassandraTable Methods (SPARKC-570)
 * Change Dse Prefixed Parameters (SPARKC-575)
 * Update Reference Docs (SPARKC-574)
 * Re-enable Travis CI (SPARKC-573)
 * Control when resolution of Contact Points Occurs (SPARKC-571)


3.0.0-Alpha (Included in 2.5.0)
  * Include all DS Specific Features
     * Includes CassandraHiveMetastore
     * Structured Streaming Sink Support
     * DirectJoin Catalyst Optimziation
     * Ttl and Writetime functions for Dataframes
     * Astra and Java Driver 4.0 Support
     * InJoin Optimizations
     * Read Throttle
     * Continuous Paging For DSE Clusters
     * More

*******************************************************************************

2.4.3
  * Fix issue with Hadoop3 Compatibility

2.4.2
  * Support for Scala 2.12 (SPARKC-458)

2.4.1
 * Includes all up to 2.3.3

2.4.0
 * Support for Spark 2.4

********************************************************************************

2.3.3
 * Includes all patches up to 2.0.11

2.3.2
 * Includes all patches up to 2.0.10

2.3.1
 * Includes all patches up to 2.0.9

2.3.0
 * Support for Spark 2.3.0 (SPARKC-530)
 * Pushdown filter for composite partition keys doesn't work (SPARKC-490)